# ChangeLog for www-apache/mod_gnutls
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_gnutls/ChangeLog,v 1.16 2008/09/16 15:45:35 trapni Exp $

*mod_gnutls-0.5.2 (16 Sep 2008)

  16 Sep 2008; Christian Parpart <trapni@gentoo.org>
  +mod_gnutls-0.5.2.ebuild:
  version bump

*mod_gnutls-0.5.1 (22 Mar 2008)

  22 Mar 2008; Benedikt Böhm <hollow@gentoo.org> +mod_gnutls-0.5.1.ebuild:
  version bump wrt #212920

  29 Jan 2008; Benedikt Böhm <hollow@gentoo.org> metadata.xml,
  mod_gnutls-0.2.0.ebuild, mod_gnutls-0.4.2.1.ebuild:
  fix depend.apache usage wrt #208033

  06 Jan 2008; Benedikt Böhm <hollow@gentoo.org> files/47_mod_gnutls.conf:
  fix #204636

*mod_gnutls-0.4.2.1 (31 Dec 2007)

  31 Dec 2007; Benedikt Böhm <hollow@gentoo.org> files/47_mod_gnutls.conf,
  +mod_gnutls-0.4.2.1.ebuild:
  version bump; #203834

  11 Apr 2007; Luca Longinotti <chtekk@gentoo.org> mod_gnutls-0.2.0.ebuild:
  Fix bug #168044.

  15 Jan 2007; Luca Longinotti <chtekk@gentoo.org> -mod_gnutls-0.1.0.ebuild,
  -mod_gnutls-0.1.1.ebuild, -mod_gnutls-0.1.1-r1.ebuild,
  mod_gnutls-0.2.0.ebuild:
  Cleanup.

  04 Jun 2006; Michael Stewart <vericgar@gentoo.org>
  mod_gnutls-0.1.0.ebuild, mod_gnutls-0.1.1.ebuild,
  mod_gnutls-0.1.1-r1.ebuild, mod_gnutls-0.2.0.ebuild:
  Address dependency issues caused by depend.apache. Refer to bug 107127.

  10 Dec 2005; Simon Stelling <blubb@gentoo.org> mod_gnutls-0.2.0.ebuild:
  stable on amd64

*mod_gnutls-0.2.0 (27 Apr 2005)

  27 Apr 2005; Christian Parpart <trapni@gentoo.org>
  +mod_gnutls-0.2.0.ebuild:
  version bump

  13 Apr 2005; Christian Parpart <trapni@gentoo.org>
  files/47_mod_gnutls.conf, mod_gnutls-0.1.1-r1.ebuild:
  changed GnuTLSCache path from /etc/apache2/conf/ to /var/cache/mod_gnutls/

  13 Apr 2005; Christian Parpart <trapni@gentoo.org>
  files/47_mod_gnutls.conf:
  adding missing "Listen 443" line and comment to config file
