@@ -3,9 +3,11 @@ DIST modsecurity-apache_2.1.2.tar.gz 657803 RMD160 3d0d2a767133ab1ec1ef3848e2f85
 DIST modsecurity-apache_2.1.6.tar.gz 679366 RMD160 3133e67f415ba3273563e6f4e0a43c7ecc7812ae SHA1 08c2d18d555159fa7cab626c410f92a7bbfa57b3 SHA256 144e2c82a5b0f356e11148184d97634302c6c4281aef68d2700b970b84536273
 DIST modsecurity-apache_2.5.5.tar.gz 1073723 RMD160 04b116c6a1d0d4af38ec100bb62302294bb7106c SHA1 41a08b9af902b67eabaabe2dd3c257d35aaf5d30 SHA256 626909c8408e2fd9e387f592f49e9d2c6501513b4cdc18dd89a8e9f3e124d959
 DIST modsecurity-apache_2.5.6.tar.gz 1079094 RMD160 a051211538334aa9a753e92ab787ff49ffd0b685 SHA1 5fb2b5ff3933d4bf766f2e46242bb991603e7081 SHA256 9f38176cdb69e610238e5aa5401b0fc72972fc72af5d9203ada98f962833bdca
+DIST modsecurity-apache_2.5.7.tar.gz 1117167 RMD160 063f68123bc8b70a4abc457c3794d751ab1ebede SHA1 29a4f8f376dbc1ab3b05c943a1a3c1e4a9e8196a SHA256 581b81e39fe23bae75f460547b8d4c172ffaa54ff913ccf94b62cc56b4fb3d9a
 EBUILD mod_security-2.1.2.ebuild 1400 RMD160 1182531b3194a46b014a140212d2190a2957fe96 SHA1 023b1817c4e1181a77f8b9a9b2135dae39d29e31 SHA256 5edc46ed1e7fc8a4d2f232e2c7f45de54ba10e9c5b43b2274d64764a46b23037
 EBUILD mod_security-2.1.6.ebuild 1424 RMD160 687f4e0692cb8443411d5df23ab9d301215c9a37 SHA1 961cf48f6330f014c57a476838388ac386273377 SHA256 6578d751df77c29dc41e4cf1d8b80b86434efc32393327eaaa184c05d68cba3b
 EBUILD mod_security-2.5.5.ebuild 1577 RMD160 2b281cbafc657bd9ea51f67ff52f6b2c4fa5b2af SHA1 d5435cee8c95bc7f0193d9e2f31a32bdcdee2c3e SHA256 f2421ccda41f7e0576054eccfa07c77b01324c7aca6f4647bf38674b23a24031
 EBUILD mod_security-2.5.6.ebuild 1577 RMD160 af8265649bd7c8fed94019abd36ef3964237baed SHA1 f16baa6eefc63b6a56c34e526d3a3ffe36ed4af9 SHA256 1bf795f7bde942f683c0377e876b31eda4df7218fe3e88b1789c644c14a220b2
-MISC ChangeLog 6402 RMD160 dbd6e87e6b185fb6b057534efdf30fec4294f7de SHA1 d3494d552bdc5061537e8be5d8ced86be65ccdeb SHA256 9e461e32b68c650ef57b59ecbffb3df2e303b543e5490dbd18e55ebe68606ea3
+EBUILD mod_security-2.5.7.ebuild 1577 RMD160 ffebbe02c06231094c07638a9a5be832f355dc1e SHA1 b009ba5eba3475e9cb4535b6ae9a81d53d14abfc SHA256 6fe50278e9dbfad376ebd051c7a52cad7c0fba23cfa5a780b4ae5f8c214edc15
+MISC ChangeLog 6545 RMD160 7dcf79db3fc978598eaf5ceeeff76a0c30bc3377 SHA1 21b3e948f974fcf1949a94721871cf0c61a22685 SHA256 55431a71aabb9326efb7efef015c5284876f26e5762957518a81e4d53042809c
 MISC metadata.xml 255 RMD160 a80959a97f317179745aa51dc813fc77fc12f431 SHA1 202b14b369f47c3f1f5b44384447c7769cc61755 SHA256 deef3dd2faff775a34529a8909b6e003cce31ee1a9858ace880da761f463ab65
